# py-chip-8

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/chip8py/: __main__.py  config.toml  cpu.py  display.py  keypad.py  memory.py  timers.py
src/pychip8/: __main__.py  config.toml  cpu.py  keypad.py  memory.py  timers.py
